--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
+body {
+    margin: 0;
+}
+
 .main-container {
     max-width: 1440px !important;
     margin: 0 auto !important;
-    padding: 0 20px !important;
     /* Optionnel : Pour un peu d'espace intérieur */
 }
 
 .custom-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     color: white;
     max-width: 1440px;
@@ -16,27 +22,53 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0;
+    width: 100%;
+    height: 80px;
 }
 
-.site-title a {
-    font-size: 24px;
-    font-weight: bold;
-    color: #E74C3C;
-    /* Couleur du titre du site */
-    text-decoration: none;
+.site-title {
+    flex-shrink: 0;
+    margin-left: 100px;
+}
+
+.site-title a img {
+    max-height: 60px;
+    /* Adjust the height as needed */
 }
 
 .nav-menu {
     display: flex;
+    flex-grow: 1;
+    justify-content: flex-end;
 }
 
-.nav-menu a {
-    color: #000;
-    /* Couleur des liens du menu */
+
+/* Menu items */
+#primary-menu {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-right: 100px;
+}
+
+#primary-menu li {
+    margin: 0 10px;
+    /* Adjust spacing between menu items */
+}
+
+#primary-menu a {
     text-decoration: none;
-    margin-left: 20px;
-    font-size: 16px;
+    color: black;
+    font-size: 16;
+    font-family: 'Space Mono';
+    font-weight: 400;
+    text-transform: uppercase;
+    word-wrap: break-word;
+    /* Adjust color as needed */
+    padding: 10px 15px;
+    /* Adjust padding as needed */
+    display: block;
 }
 
 .header-image-container {
@@ -67,10 +99,18 @@
     top: 50% !important;
     left: 50% !important;
     transform: translate(-50%, -50%) !important;
-    font-size: 3rem !important;
-    font-weight: bold !important;
+    font-family: 'Space Mono';
+    font-style: italic;
+    font-size: 96px !important;
+    font-weight: 700 !important;
     text-transform: uppercase !important;
-    letter-spacing: 0.1em !important;
+    word-wrap: break-word;
+    width: 1000px;
+    color: transparent;
+    -webkit-text-stroke-width: 2px;
+    /* Épaisseur du contour */
+    -webkit-text-stroke-color: white;
+    /* Couleur du contour */
 }
 
 .nav-menu {
@@ -115,9 +155,18 @@
 }
 
 #load-more-button {
+    color: 'black';
+    font-size: 12;
+    font-family: 'Space Mono';
+    font-weight: '400';
+    word-wrap: 'break-word';
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    border: none;
+    width: 272px;
+    height: 50px;
+    margin-top: 20px;
 }
 
 footer {
@@ -131,5 +180,19 @@ footer {
 footer a {
     color: #000;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 16px;
+    font-family: 'Space Mono';
+    font-weight: 400;
+    text-transform: uppercase;
+    word-wrap: break-word;
+    padding-left: 43px;
+    padding-right: 43px;
+}
+
+.footer-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
 }
