--- a/style.css
+++ b/style.css
@@ -134,6 +134,34 @@ body {
     padding: 20px;
 }
 
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* Deux colonnes */
+    gap: 10px;
+}
+
+.gallery-item {
+    position: relative;
+    width: 100%;
+    height: 564px;
+    /* Hauteur fixe */
+    overflow: hidden;
+    background-color: #f0f0f0;
+    /* Couleur de fond pour les espaces */
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* S'assurer que les images couvrent l'espace sans distorsion */
+    object-position: center;
+    /* Centrer l'image */
+    display: block;
+    /* Élimine les espaces blancs en ligne */
+}
+
 .filters {
     display: flex;
     justify-content: space-between;
