--- a/style.css
+++ b/style.css
@@ -143,8 +143,8 @@ body {
 
 .gallery-item {
     position: relative;
-    width: 100%;
-    height: 564px;
+    width: 100% !important;
+    height: 564px !important;
     /* Hauteur fixe */
     overflow: hidden;
     background-color: #f0f0f0;
@@ -152,8 +152,8 @@ body {
 }
 
 .gallery-item img {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     object-fit: cover;
     /* S'assurer que les images couvrent l'espace sans distorsion */
     object-position: center;
