--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
+/* Styles globaux */
 body {
     margin: 0;
 }
 
+/* Conteneur principal */
 .main-container {
     max-width: 1440px !important;
     margin: 0 auto !important;
     /* Optionnel : Pour un peu d'espace intérieur */
 }
 
+/* En-tête personnalisée */
 .custom-header {
     display: flex;
     flex-direction: column;
@@ -18,6 +21,7 @@ body {
     margin: 0 auto;
 }
 
+/* Partie supérieure de l'en-tête */
 .header-top {
     display: flex;
     justify-content: space-between;
@@ -26,6 +30,7 @@ body {
     height: 80px;
 }
 
+/* Titre du site */
 .site-title {
     flex-shrink: 0;
     margin-left: 100px;
@@ -33,17 +38,17 @@ body {
 
 .site-title a img {
     max-height: 60px;
-    /* Adjust the height as needed */
+    /* Ajuster la hauteur si nécessaire */
 }
 
+/* Menu de navigation */
 .nav-menu {
     display: flex;
     flex-grow: 1;
     justify-content: flex-end;
 }
 
-
-/* Menu items */
+/* Éléments du menu principal */
 #primary-menu {
     display: flex;
     list-style: none;
@@ -54,7 +59,7 @@ body {
 
 #primary-menu li {
     margin: 0 10px;
-    /* Adjust spacing between menu items */
+    /* Ajuster l'espacement entre les éléments du menu */
 }
 
 #primary-menu a {
@@ -65,20 +70,21 @@ body {
     font-weight: 400;
     text-transform: uppercase;
     word-wrap: break-word;
-    /* Adjust color as needed */
+    /* Ajuster la couleur si nécessaire */
     padding: 10px 15px;
-    /* Adjust padding as needed */
+    /* Ajuster le padding si nécessaire */
     display: block;
 }
 
 #primary-menu a:hover {
-    font-Size: 16;
-    font-Family: 'Space Mono';
-    font-Weight: 700;
-    text-Transform: uppercase;
-    word-Wrap: break-word
+    font-size: 16;
+    font-family: 'Space Mono';
+    font-weight: 700;
+    text-transform: uppercase;
+    word-wrap: break-word;
 }
 
+/* Conteneur de l'image de l'en-tête */
 .header-image-container {
     position: relative !important;
     width: 100% !important;
@@ -93,6 +99,7 @@ body {
     margin: 0 auto !important;
 }
 
+/* Overlay pour l'image de l'en-tête */
 .custom-header .overlay {
     position: absolute !important;
     top: 0 !important;
@@ -102,6 +109,7 @@ body {
     background: rgba(0, 0, 0, 0.5) !important;
 }
 
+/* Texte de l'en-tête */
 .custom-header .header-text {
     position: absolute !important;
     top: 50% !important;
@@ -121,19 +129,21 @@ body {
     /* Couleur du contour */
 }
 
+/* Menu de navigation pour petit écran */
 .nav-menu {
     position: absolute !important;
     top: 20px !important;
     right: 20px !important;
 }
 
-
+/* Conteneur de la galerie */
 .gallery-container {
     max-width: 1440px;
     margin: 0 auto;
     padding: 20px;
 }
 
+/* Grille de la galerie */
 .gallery-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -162,6 +172,7 @@ body {
     /* Élimine les espaces blancs en ligne */
 }
 
+/* Filtres de la galerie */
 .filters {
     display: flex;
     justify-content: space-between;
@@ -186,7 +197,6 @@ body {
     font-family: Arial, sans-serif;
 }
 
-
 .dropdown-selected {
     background-color: #fff;
     border: 1px solid #ccc;
@@ -204,7 +214,6 @@ body {
     font-style: normal;
     font-weight: 500;
     line-height: 18px;
-    letter-spacing: 0.36px;
     text-transform: uppercase;
     gap: 10px;
 }
@@ -251,7 +260,6 @@ body {
     font-style: normal;
     font-weight: 500;
     line-height: 18px;
-    letter-spacing: 0.36px;
     gap: 10px;
 }
 
@@ -274,7 +282,7 @@ body {
     color: white;
 }
 
-
+/* Grille de la galerie */
 .gallery-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -287,6 +295,7 @@ body {
     display: block;
 }
 
+/* Bouton charger plus */
 .load-more {
     text-align: center;
     margin-top: 20px;
@@ -310,12 +319,13 @@ body {
 #load-more-button:hover {
     background-color: #000;
     color: white;
-    font-Size: 12;
-    font-Family: 'Space Mono';
-    font-Weight: 700;
-    word-Wrap: break-word;
+    font-size: 12;
+    font-family: 'Space Mono';
+    font-weight: 700;
+    word-wrap: break-word;
 }
 
+/* Pied de page */
 footer {
     display: flex;
     justify-content: space-around;
@@ -339,11 +349,11 @@ footer a {
 footer a:hover {
     color: #000;
     text-decoration: none;
-    font-Size: 16;
-    font-Family: 'Space Mono';
-    font-Weight: 700;
-    text-Transform: uppercase;
-    word-Wrap: break-word;
+    font-size: 16;
+    font-family: 'Space Mono';
+    font-weight: 700;
+    text-transform: uppercase;
+    word-wrap: break-word;
 }
 
 .footer-menu {
@@ -377,10 +387,12 @@ footer a:hover {
     position: relative;
 }
 
+/* Gestion du défilement */
 body.no-scroll {
     overflow: hidden;
 }
 
+/* Styles pour la modal */
 .modal {
     display: none;
     position: fixed;
@@ -506,6 +518,7 @@ body.no-scroll {
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.02);
 }
 
+/* Bouton d'appel à l'action */
 .cta-button {
     background-color: #008CBA;
     color: white;
@@ -599,8 +612,6 @@ body.no-scroll {
         align-items: center;
     }
 }
-
-
 
 @media screen and (max-width: 1000px) {
     .custom-header .header-text {
