--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body {
     position: relative !important;
     width: 100% !important;
     overflow: hidden !important;
+    max-height: 966px;
 }
 
 .header-image {
@@ -97,6 +98,7 @@ body {
     display: block !important;
     max-width: 1440px !important;
     margin: 0 auto !important;
+    object-fit: cover;
 }
 
 /* Overlay pour l'image de l'en-tête */
@@ -330,7 +332,8 @@ footer {
     display: flex;
     justify-content: space-around;
     padding: 10px;
-    background-color: #f0f0f0;
+    border-top: 1px solid black;
+    /* Ajoute une bordure noire de 5 pixels en haut du footer */
     margin-top: 20px;
 }
 
@@ -563,43 +566,33 @@ body.no-scroll {
 }
 
 /* Navigation des photos */
-.photo-navigation {
+.navigation-buttons {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin: 20px 0;
+    right: 0;
+    padding: 0 20px;
 }
 
-.nav-button {
-    background-color: #0073e6;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 5px;
-    margin: 0 10px;
+.nav-arrow {
+    font-size: 2em;
+    color: #333;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 10px;
+    border-radius: 50%;
+    text-decoration: none;
+    transition: background-color 0.3s;
 }
 
-.nav-button:hover {
-    background-color: #005bb5;
+.nav-arrow:hover {
+    background-color: rgba(255, 255, 255, 1);
+    color: #000;
 }
 
-.thumbnail {
+.photos-connexes {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    height: 100px;
-    cursor: pointer;
+    flex-direction: row;
 }
 
-.thumbnail img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 5px;
-}
 
 /* Styles pour le menu en version mobile */
 @media screen and (max-width: 800px) {
