--- a/style.css
+++ b/style.css
@@ -803,6 +803,7 @@ body.no-scroll {
     align-items: center;
     right: 0;
     padding: 0 20px;
+    position: relative;
 }
 
 .nav-arrow {
@@ -1023,23 +1024,18 @@ body.no-scroll {
 }
 
 #nav-preview-container {
-    position: fixed;
-    top: 50%;
-    transform: translateY(-50%);
+    width: 100px;
+    height: 100px;
     display: none;
     z-index: 1000;
+    pointer-events: none;
 }
 
 #nav-preview-container img {
-    width: 200px;
-    /* Adjust the size as needed */
-    height: auto;
-    transition: opacity 0.5s ease;
-    opacity: 0;
-}
-
-#nav-preview-container img.show {
-    opacity: 1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
 }
 
 
