--- a/style.css
+++ b/style.css
@@ -798,29 +798,49 @@ body.no-scroll {
 }
 
 /* Navigation des photos */
+.navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
 .navigation-buttons {
     display: flex;
     align-items: center;
     right: 0;
-    padding: 0 20px;
     position: relative;
+    margin-left: 10px;
+    overflow: hidden;
+    margin-top: 5px;
 }
 
 .nav-arrow {
-    font-size: 2em;
     color: #333;
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 10px;
+    padding: 0 10px;
     border-radius: 50%;
     text-decoration: none;
-    transition: background-color 0.3s;
 }
 
 .nav-arrow:hover {
-    background-color: rgba(255, 255, 255, 1);
     color: #000;
 }
 
+#nav-preview-container {
+    width: 81px;
+    height: 71px;
+    display: none;
+    z-index: 1000;
+    pointer-events: none;
+    margin-left: 10px;
+}
+
+#nav-preview-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
 
 /* Lightbox styles */
 .lightbox {
@@ -840,18 +860,12 @@ body.no-scroll {
 .lightbox-content {
     position: relative;
     text-align: center;
-    width: 90%;
-    /* Assurez-vous que le contenu prend 90% de la largeur de la fenêtre */
-    max-width: 90%;
-    /* Limite la largeur maximale à 90% */
-    max-height: 90%;
-    /* Limite la hauteur maximale à 90% */
 }
 
 .lightbox img {
     width: 100%;
     height: auto;
-    max-height: 80vh;
+    max-height: 90vh;
     /* Limite la hauteur maximale de l'image */
     object-fit: contain;
     /* Contenir l'image dans la boîte sans la déformer */
@@ -865,6 +879,20 @@ body.no-scroll {
     font-size: 30px;
     font-weight: bold;
     cursor: pointer;
+    z-index: 1000;
+    margin-top: 35px;
+    margin-right: 35px;
+}
+
+.nav-text {
+    color: #FFF;
+    font-family: "Space Mono";
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .lightbox-prev,
@@ -881,6 +909,9 @@ body.no-scroll {
     transition: 0.3s;
     user-select: none;
     z-index: 1000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .lightbox-prev {
@@ -895,7 +926,9 @@ body.no-scroll {
 
 .lightbox-prev:hover,
 .lightbox-next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.4);
+    color: inherit;
+    text-decoration: none;
 }
 
 .lightbox-info {
@@ -911,6 +944,13 @@ body.no-scroll {
     padding: 10px;
     width: 50%;
     /* S'assure que chaque élément prend 50% de la largeur disponible */
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
 }
 
 /* Style page infophoto.php */
@@ -955,6 +995,7 @@ body.no-scroll {
     align-items: flex-start;
     /* Align content to the left */
     gap: 10px;
+    border-bottom: 1px solid black;
 }
 
 .interesse-infophoto {
@@ -964,6 +1005,8 @@ body.no-scroll {
     font-style: normal;
     font-weight: 300;
     line-height: normal;
+    margin-top: 20px;
+    margin-right: 96px;
 }
 
 .titre-part2infophoto {
@@ -999,6 +1042,7 @@ body.no-scroll {
     justify-content: space-between;
     align-items: center;
     height: 118px;
+    border-bottom: 1px solid black;
 }
 
 .titre-infophoto {
@@ -1024,19 +1068,46 @@ body.no-scroll {
     text-transform: uppercase;
 }
 
-#nav-preview-container {
-    width: 100px;
-    height: 100px;
-    display: none;
-    z-index: 1000;
-    pointer-events: none;
+
+
+/* Styles pour la page de vie privée */
+.privacy-policy-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: 'Space Mono', monospace;
 }
 
-#nav-preview-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
+.privacy-policy-title {
+    font-size: 2.5em;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #313144;
+}
+
+.privacy-section {
+    margin-bottom: 40px;
+    /* Ajoute de l'espace entre chaque section */
+}
+
+.privacy-section h2 {
+    font-size: 1.8em;
+    color: #313144;
+    border-bottom: 2px solid #313144;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+}
+
+.privacy-section p {
+    font-size: 1em;
+    color: #313144;
+    line-height: 1.5;
+    margin-bottom: 10px;
+    /* Ajoute de l'espace entre les paragraphes */
+}
+
+.privacy-section strong {
+    font-weight: bold;
 }
 
 
@@ -1059,6 +1130,10 @@ body.no-scroll {
     .nav-menu.active {
         display: flex;
         margin-top: 60px;
+    }
+
+    .interesse-infophoto {
+        margin-right: 10px;
     }
 
     .hamburger {
@@ -1118,6 +1193,10 @@ body.no-scroll {
         flex-direction: column;
         align-items: center;
     }
+
+    .nav-text {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 1000px) {
@@ -1127,7 +1206,26 @@ body.no-scroll {
         left: 50% !important;
         transform: translate(-26%, -50%) !important;
         line-height: normal;
-        font-weight: 700;
+        font-weight: 500 !important;
+    }
+
+    .dropdowns-container {
+        display: flex;
+        justify-content: center;
+        /* Centrer horizontalement */
+        align-items: center;
+        /* Centrer verticalement */
+        gap: 10px;
+        /* Espace entre les éléments */
+        padding: 20px;
+        flex-direction: column;
+        margin-top: 0;
+    }
+
+    .left-dropdowns {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
 
@@ -1136,4 +1234,16 @@ body.no-scroll {
         grid-template-columns: 1fr;
         /* 1 colonne pour petits écrans */
     }
+}
+
+@media screen and (max-width: 530px) {
+    .custom-header .header-text {
+        font-size: 30px !important;
+        top: 50% !important;
+        left: 75% !important;
+        transform: translate(-26%, -50%) !important;
+        line-height: normal;
+        font-weight: 500 !important;
+    }
+
 }
