--- a/style.css
+++ b/style.css
@@ -957,6 +957,7 @@ body.no-scroll {
 
 .container {
     max-width: 1440px;
+    max-height: 90vh;
     margin: 0 auto;
     padding: 0 20px;
     display: flex;
@@ -1034,6 +1035,7 @@ body.no-scroll {
 
 .photo-image img {
     width: 100%;
+    max-height: 75vh;
     object-fit: cover;
 }
 
