--- a/style.css
+++ b/style.css
@@ -366,6 +366,10 @@ body {
     /* Ajoute un fond blanc pour les cartes */
 }
 
+.related-photo-card.hidden {
+    display: none;
+}
+
 .related-photo-card img {
     position: absolute;
     top: 0;
@@ -531,7 +535,6 @@ body {
     border: none;
     width: 272px;
     height: 50px;
-    margin-top: 20px;
 }
 
 .load-more-button:hover {
